# RRTMG_SW

./: .gitignore  CMakeLists.txt
cmake/: compilers.cmake  parameters.cmake
interface/: CMakeLists.txt  macros.h  macros.h.in  rrtmg_sw.cpp  rrtmg_sw.hpp  rrtmg_sw_init.h  rrtmg_sw_nomcica.h  rrtmg_sw_rad_nomcica.h
modules/: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_rrtmg_sw_nomcica.cpp
